--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -195,10 +195,18 @@
                     </p>
                 </li>
                 <li>Press the Flash button. The process will take several minutes.</li>
-                <li>After the microSD is flashed, open File Explorer on your laptop, navigate to the root of the microSD card (probably E:), right-click and choose &#39;New&gt;Text Document&#39;</li>
+                <li>After the microSD is flashed, open File Explorer on your laptop, navigate to the D: drive, labeled &#39;boot&#39;.<br />
+                    This is the microSD card.<br />
+                    Right-click and choose &#39;New&gt;Text Document&#39;</li>
                 <li>Enter your name as the name of the text document, such as &#39;MyName.txt&#39;<br />
                     This will identify you as the owner of the microSD card in case it is turned into Lost 
-                    &amp; Found.</li>
+                    &amp; Found.
+                    <p>
+                        <a href="MyName.JPG" class="img-responsive img-rounded" target="popup" onclick="window.open('MyName.jpg', 'popup'); return false;">
+                            <img src="MyName.JPG" width="300" alt="create MyName.txt" class="img-responsive img-responsive" /></a>Find &#39;boot&#39;, create &#39;MyName.txt&#39;<br />
+                    </p>
+
+                </li>
             </ol>
             <hr />
         </div>
@@ -359,9 +367,9 @@
         <div class="col-lg-12 text-primary">
             <p>
                 (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
-                <hr />
                 Upload your screenshot to the &#39;IOTP01&#39; D2L Assignment Folder.
             </p>
+            <hr />
 
             <div class="col-lg-12 text-danger">
                 <h2>Screen Shot IOTP01</h2>
