added RPi zoom info, ssh on Mac

--- a/IOTP03/IOTP03.html
+++ b/IOTP03/IOTP03.html
@@ -215,12 +215,14 @@
                 </li>
 
                 <li>On the Raspberry Pi you MUST open the Chromium browser and verify that you can  reach a website such as: <br />
-                    <code>google.com</code><br />
+                    <code>www.winona.edu</code><br />
                     If not, you will be redirected to a web authentication page, where you can create a WSU guest account, and logon.
                 </li>
 
 
-                <li>If PuTTY is not running, start it per the instructions in Excercise 1.</li>
+                <li>If PuTTY is not running, start it per the instructions in Excercise 1.<br />
+                    If using a Mac, go to this url: <a href="https://www.raspberrypi.org/documentation/remote-access/ssh/unix.md"  class="bg-info text-white" target="_blank">https://www.raspberrypi.org/documentation/remote-access/ssh/unix.md  </a>&nbsp;   then go to the next Exercise.
+                </li>
 
                 <li>
                     <p>
