--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -96,6 +96,7 @@
             <p>
                 These instructions will show you how to download and create the operating system for a Raspberry Pi single-board computer (SBC); and then start up the device.<br />
                 SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats</a> and <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>.<br />
+                These devices make up the Internet of Things-IoT, which is greatly impacting organizations and everyday life.<br />
                 In later assignments you will continue working with and experiencing the capabilities of the Raspberry Pi.
             </p>
             <p>After completing this assignment you will be able to:</p>
@@ -119,6 +120,8 @@
         <div id="Overview" class="collapse in  col-lg-12">
             This assignment reviews basic computer concepts that you will need in this course and throughout your career.
             <br />
+            Somsen 301 makes use of a Raspberry Pi 3 B+. <br />
+            Please use a 16GB class 10 (or better) microSD card for these assignments.
             <p>
                 You are expected to have a working knowledge of SBC hardware and software.<br />
                 If you do not understand how to use an item, perform a Google Search, 
