clarified WSU Guest WiFi login procedure, added link to more detailed instructions

--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -153,7 +153,7 @@
                 <li>These steps are performed on your laptop.<br />
                     Download the required files (Raspbian image, Balena Etcher) from the WSU network at 
                     <code>\\mispgp\RaspberryPiAndSoftwareImages\</code> to your <code> Downloads</code> folder<br />
-                    or obtain this software from Professor Paulson&#39;s OneDrive ReadOnly folder, <a href="https://mnscu-my.sharepoint.com/:f:/g/personal/wp8798rh_minnstate_edu/Ellwjc3DXPdBlFO2tO9Wp-gBHfqOYdgSjDwVxdjZnsoVnQ?e=9IixBd">RaspberryPiAndSoftwareImages</a>
+                    or obtain this software from Professor Paulson&#39;s OneDrive ReadOnly folder, <a href="https://mnscu-my.sharepoint.com/:f:/g/personal/wp8798rh_minnstate_edu/Ellwjc3DXPdBlFO2tO9Wp-gBHfqOYdgSjDwVxdjZnsoVnQ?e=9IixBd" class="bg-info text-white" target="_blank">RaspberryPiAndSoftwareImages</a>
 
                     <hr />
                     Alternatively you can obtain the software at these websites:<br />
@@ -209,7 +209,9 @@
                     </p>
                 </li>
                 <li>Press the Flash button. The process will take several minutes.</li>
-                <li>After the microSD is flashed, open File Explorer on your laptop, navigate to the D: drive, labeled &#39;boot&#39;.<br />
+                <li>After the microSD is flashed, it is &#39;auto-ejected&#39;.&nbsp; <br />
+                    Remove and replace the USB microSD reader.<br />
+                    Open File Explorer on your laptop, navigate to the D: drive, labeled &#39;boot&#39;.<br />
                     This is the microSD card.<br />
                     Right-click and choose &#39;New&gt;Text Document&#39;</li>
                 <li>Enter your name as the name of the text document, such as &#39;MyName.txt&#39;<br />
@@ -246,16 +248,16 @@
                 <li>Press the power button on the Pi, which should be on top or around the monitor in front of you.<br />
                     You should see a red light on the Pi, which indicates power is on.</li>
 
-                <li>On your monitor press the button with the colored dot.
+                <li>On the landscape monitor, lower right corner, press the button with the colored dot.
                     <br />
                     Note that repeatedly pressing this button switches the monitor between displaying your laptop and the Raspberry Pi.
                 </li>
                 <li>Follow the on-screen instructions to set your country, language and Time-zone.<br />
                     Check the boxes for &#39;Use English language&#39; and &#39;Use US keyboard&#39;.</li>
                 <li>Check “This screen shows a black border around the desktop” if you have a black border.</li>
-                <li>ONLY CONNECT TO WSU GUEST NETWORK!!!<br />
-                    If prompted make an account and log in.<br />
-                    <strong>Note: you may periodically have to open the Raspberry Pi browser to 'winona.edu' and repeat the WSU Guest Network login process.</strong>
+                <li>ONLY CONNECT TO WSU GUEST WiFi NETWORK!!!<br />
+                    <a href="https://eprofessor.azurewebsites.net/HelpFiles/WSU_Guest_WiFi/GuestWiFi.html" class="bg-info text-white" target="_blank">Follow these instructions</a> to make an account and log onto the WSU Guest WiFi network.<br />
+                    <strong>Note: you may periodically have to open the Raspberry Pi browser to 'www.winona.edu' and repeat the WSU Guest Network login process.</strong>
                 </li>
 
                 <li>When asked to update, click next.
