updated IOT path to be consistent, added screen shot to P03 to show how to save file using text editor

--- a/IOT07/IOT07.html
+++ b/IOT07/IOT07.html
@@ -166,7 +166,7 @@
                     Then click &#39;Gzip&#39;, which will download the world database to the&nbsp; &#39;/home/pi/Downloads&#39; folder.
                 </li>
 
-                <li>Open the folder containing the downloaded file and double click it to extract it as &#39;world.sql&#39; in the &#39;/home/pi/Documents&#39; folder.<br />
+                <li>Open the folder containing the downloaded file and double click it to extract it as &#39;world.sql&#39; in the &#39;/home/pi/Downloads&#39; folder.<br />
                     <a href="ExtractWorld.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ExtractWorld.PNG', 'popup'); return false;">
                         <img src="ExtractWorld.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Extract World Database<br />
                 </li>
