--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -17,12 +17,6 @@
     <!-- course constant file that contains semester, class, section pages -->
     <script src="../../ReadOnly/CourseConstants.js"></script>
 
-	<style type="text/css">
-		.auto-style1 {
-			width: 708px;
-		}
-	</style>
-
 </head>
 
 <body onload="setVariables()">
@@ -401,7 +395,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="auto-style1" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTP01.">
+            <input name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTP01.">
             <hr />
         </div>
 
