corrected image hyperlinks so all 3 match new file name

--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -156,7 +156,7 @@
                     VNC Viewer:
                                         <a href="https://www.realvnc.com/en/connect/download/viewer/">https://www.realvnc.com/en/connect/download/viewer/</a>&nbsp;
                                         <p>
-                        <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
+                        <a href="RaspberryPiImager.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspberryPiImager.PNG', 'popup'); return false;">
                             <img src="RaspberryPiImager.png" width="300" alt="Rasbian with desktop" class="img-responsive img-responsive" /></a> Raspbian Pi Imager
                     </p>
 
