Switching to use USB 3 flash drive instead of microSD card

--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -121,7 +121,7 @@
             This assignment reviews basic computer concepts that you will need in this course and throughout your career.
             <br />
             Somsen 301 makes use of a Raspberry Pi 3 B+. <br />
-            Please use a 16GB class 10 (or better) microSD card for these assignments.
+            Please use a 16GB SanDisk USB 3.0 Flash Drive (Cruzer, Ultrafit or Glide) for these assignments.
             <p>
                 You are expected to have a working knowledge of SBC hardware and software.<br />
                 If you do not understand how to use an item, perform a Google Search, 
