--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -102,7 +102,7 @@
             <p>After completing this assignment you will be able to:</p>
             <ol>
                 <li>Obtain latest Raspbian operating system</li>
-                <li>Create a bootable micro-SD card containing the operating system</li>
+                <li>Create a bootable USB 3.0 flash drive containing the operating system</li>
                 <li>Boot the Raspberry Pi</li>
                 <li>Connect to the WSU Guest wireless network</li>
                 <li>Configure the Raspberry Pi</li>
@@ -179,34 +179,29 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Flash microSD card</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Flash USB drive</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
                 <li>These steps are performed on your laptop.</li>
 
-                <li>Install the microSD card into a USB or USB-C reader and plug into your laptop.<br />
-                    <p>
-                        <a href="USBreaders.jpg" class="img-responsive img-rounded" target="popup" onclick="window.open('USBreaders.jpg', 'popup'); return false;">
-                            <img src="USBreaders.jpg" width="300" alt="flash raspbian to microSD" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br />
-                    </p>
-                </li>
+                <li>Install the USB 3.0 flash drive into your laptop or a port in the HP Dock.</li>
 
-                <li>Open Imager and make sure it recognizes the microSD card under &quot;Choose Storage&quot;.<br />
+                <li>Open Imager and make sure it recognizes the flash drive under &quot;Choose Storage&quot;.<br />
                     If Imager does not appear, you will need to restart your laptop.</li>
                 <li>Select &quot;Choose OS&quot; and scroll to the bottom until you see &quot;Use Custom&quot;. Select &quot;Use Custom&quot; and select your Raspbian Image from your Downloads folder. <br />
                     <p>
                         <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
-                            <img src="FlashMicroSD.PNG" width="300" alt="flash raspbian to microSD" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br />
+                            <img src="FlashMicroSD.PNG" width="300" alt="flash raspbian to microSD" class="img-responsive img-responsive" /></a>Flash Raspbian to USB drive<br />
                     </p>
                 </li>
                 <li>Press the Write button. The process will take several minutes.</li>
-                <li>After the microSD is flashed, open File Explorer on your laptop, navigate to the D: drive, labeled &#39;boot&#39;.<br />
-                    This is the microSD card.<br />
+                <li>After the flash drive operation is complete, open File Explorer on your laptop, navigate to the D: drive, labeled &#39;boot&#39;.<br />
+                    This is the flash drive.<br />
                     Right-click and choose &#39;New&gt;Text Document&#39;</li>
                 <li>Enter your name as the name of the text document, such as &#39;MyName.txt&#39;<br />
-                    This will identify you as the owner of the microSD card in case it is turned into Lost 
+                    This will identify you as the owner of the flash drive in case it is turned into Lost 
                     &amp; Found.
                     <p>
                         <a href="MyName.JPG" class="img-responsive img-rounded" target="popup" onclick="window.open('MyName.jpg', 'popup'); return false;">
@@ -225,16 +220,11 @@
         <div id="Exercise03" class="collapse in  col-lg-12">
 
             <ol>
-                <li>While the microSD card is flashing, locate a USB keyboard and mouse.
+                <li>While the flash drive is flashing, locate a USB keyboard and mouse.
                     <br />
                     Plug them into the Pi at your station. </li>
 
-                <li>Once the flash is complete and verified, remove the microSD card and put it into the Pi.<br />
-                    <p>
-                        <a href="InsertMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('howtoInsertMicroSD.Pdf', 'popup'); return false;">
-                            <img src="InsertMicroSD.PNG" width="100" alt="install microSD into Pi" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
-                    </p>
-                </li>
+                <li>Once the flash is complete and verified, remove the flash drive and put it into the Pi.</li>
 
                 <li>Press the power button on the Pi, which should be on top or around the monitor in front of you.<br />
                     You should see a red light on the Pi, which indicates power is on.</li>
@@ -413,10 +403,10 @@
 
 
         <div class="col-lg-12 text-danger text-center">
-            <h2>WHEN DONE<br />
+            <h2>-- WHEN DONE --<br />
                 SHUTDOWN THE RASPBERRY PI<br />
                 TURN OFF THE POWER<br />
-                REMOVE YOUR microSD CARD
+                REMOVE YOUR FLASH DRIVE
             </h2>
         </div>
         <hr />
