change from using micro SD to flash drive for fall 2021

--- a/IOTA01/IOTA01.html
+++ b/IOTA01/IOTA01.html
@@ -159,7 +159,7 @@
                 <li>To install the Arduino IDE, in the terminal window type <code>sudo apt-get install arduino</code>, and press Enter.<br />
                     Type 
                     &#39;y&#39; and press Enter when asked to continue with the install, which is about 130MB.</li>
-                <li>When done, the Arduino IDE can be accessed from Menu&gt;Programming<br />
+                <li>-- WHEN DONE --, the Arduino IDE can be accessed from Menu&gt;Programming<br />
                     <p>
                         <a href="UnoIDE.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('UnoIDE.PNG', 'popup'); return false;">
                             <img src="UnoIDE.PNG" width="300" alt="Arduino UNO IDE" class="img-responsive img-responsive" /></a>Arduino UNO IDE
@@ -348,10 +348,10 @@
 
         <hr />
         <div class="col-lg-12 text-danger text-center">
-            <h2>WHEN DONE<br />
+            <h2>-- WHEN DONE --<br />
                 SHUTDOWN THE RASPBERRY PI<br />
                 TURN OFF THE POWER<br />
-                REMOVE YOUR microSD CARD
+                REMOVE YOUR FLASH DRIVE
             </h2>
         </div>
         <hr />
