--- a/IOTP03/IOTP03.html
+++ b/IOTP03/IOTP03.html
@@ -174,7 +174,7 @@
             <ol>
                 <li>These steps are performed on your Raspberry Pi.</li>
 
-                <li>Install the microSD card into the slot on the Raspberry Pi.<br />
+                <li>Install the flash drive into the slot on the Raspberry Pi.<br />
                     For this exercise you will not need a USB keyboard and mouse, unless you run into problems later.
                 </li>
 
@@ -432,10 +432,10 @@
 
         <hr />
         <div class="col-lg-12 text-danger text-center">
-            <h2>WHEN DONE<br />
+            <h2>-- WHEN DONE --<br />
                 SHUTDOWN THE RASPBERRY PI<br />
                 TURN OFF THE POWER<br />
-                REMOVE YOUR microSD CARD
+                REMOVE YOUR FLASH DRIVE
             </h2>
         </div>
         <hr />
