--- a/IOT02/IOT02.html
+++ b/IOT02/IOT02.html
@@ -314,10 +314,10 @@
 
 
         <div class="col-lg-12 text-danger text-center">
-            <h2>WHEN DONE<br />
+            <h2>-- WHEN DONE --<br />
                 SHUTDOWN THE RASPBERRY PI<br />
                 TURN OFF THE POWER<br />
-                REMOVE YOUR microSD CARD
+                REMOVE YOUR FLASH DRIVE
             </h2>
         </div>
         <hr />
