initial Node-RED assignment

--- a/HomePage.html
+++ b/HomePage.html
@@ -208,6 +208,20 @@
 				<td>MIS342</td>
 			</tr>
 
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td><a href="NR01/NR01.html">NR01</a> -Node-RED on RPi</td>
+				<td>&nbsp;</td>
+			</tr>
+
 			<tr class="text-center">
 				<th scope="col">No.</th>
 				<th scope="col">&nbsp;</th>
