create structure for Node RED 2 and 3.

--- a/HomePage.html
+++ b/HomePage.html
@@ -222,6 +222,27 @@
 				<td>&nbsp;</td>
 			</tr>
 
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td><a href="NR02/NR02.html">NR02</a>-Node-RED flows</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td><a href="NR03/NR03.html">NR03</a>-Node_RED sensors</td>
+				<td>&nbsp;</td>
+			</tr>
+
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+
 			<tr class="text-center">
 				<th scope="col">No.</th>
 				<th scope="col">&nbsp;</th>
