--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -87,7 +87,7 @@
 
             <p>
                 <a href="RaspberryPi3BPlus.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspberryPi3BPlus.png', 'popup'); return false;">
-                    <img src="RaspberryPi3BPlus.png" width="300" alt="Raspberry Pi 3 B+" class="img-responsive img-responsive" />
+                    <img src="Images/RaspberryPi3BPlus.png" width="300" alt="Raspberry Pi 3 B+" class="img-responsive img-responsive" />
                 </a>
                 <br />Raspberry Pi 3 B+
             </p>
@@ -130,7 +130,7 @@
 
             <p>
                 <a href="RPi3Pinout.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RPi3Pinout.png', 'popup'); return false;">
-                    <img src="RPi3Pinout.png" width="300" alt="Raspberry Pi 3" class="img-responsive img-responsive" />
+                    <img src="Images/RPi3Pinout.png" width="300" alt="Raspberry Pi 3" class="img-responsive img-responsive" />
                 </a>
                 Raspberry Pi 3 B+
             </p>
@@ -145,9 +145,9 @@
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
                 <li>These steps are performed on your laptop.<br />
-                    Download the required files (Raspbian image, Raspberry Pi Imager) from the WSU network at 
+                    Download the required files (DexPiRed.img.zip, Raspberry Pi Imager, VNC Viewer, PuTTY) from the WSU network at 
                     <code>\\mispgp\RaspberryPiAndSoftwareImages\</code> to your <code> Downloads</code> folder<br />
-                    or obtain this software from Professor Paulson&#39;s OneDrive ReadOnly folder, <a href="https://mnscu-my.sharepoint.com/:f:/g/personal/wp8798rh_minnstate_edu/Ellwjc3DXPdBlFO2tO9Wp-gBHfqOYdgSjDwVxdjZnsoVnQ?e=9IixBd">RaspberryPiAndSoftwareImages</a>
+                    or obtain this software from Professor Paulson&#39;s OneDrive ReadOnly folder, <a href="https://mnscu-my.sharepoint.com/:f:/g/personal/wp8798rh_minnstate_edu/Ellwjc3DXPdBlFO2tO9Wp-gBHfqOYdgSjDwVxdjZnsoVnQ?e=9IixBd">IOT.</a>
 
                     <hr />
                     Alternatively you can obtain the software at these websites:<br />
@@ -157,14 +157,14 @@
                                         <a href="https://www.realvnc.com/en/connect/download/viewer/">https://www.realvnc.com/en/connect/download/viewer/</a>&nbsp;
                                         <p>
                         <a href="RaspberryPiImager.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspberryPiImager.PNG', 'popup'); return false;">
-                            <img src="RaspberryPiImager.png" width="300" alt="Rasbian with desktop" class="img-responsive img-responsive" /></a> Raspbian Pi Imager
+                            <img src="Images/RaspberryPiImager.png" width="300" alt="Rasbian with desktop" class="img-responsive img-responsive" /></a> Raspbian Pi Imager
                     </p>
 
                     <hr />
 
-                    Save the Raspberry Pi image file to your Downloads folder. Do NOT place it in any OneDrive folder or sub folder.  That will cause problems, as it is a large (1.6GB) file. <p>
+                    Save the Raspberry Pi image file to your Downloads folder. Do NOT place it in any OneDrive folder or sub folder.  That will cause problems, as it is a large (1.71GB) file. <p>
                         <a href="Software.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Software.PNG', 'popup'); return false;">
-                            <img src="Software.PNG" width="300" alt="Required software" class="img-responsive img-responsive" /></a> Required Software
+                            <img src="Images/Software.PNG" width="300" alt="Required software" class="img-responsive img-responsive" /></a> Required Software
                     </p>
                 <hr />
                 </li>
@@ -193,7 +193,7 @@
                 <li>Select &quot;Choose OS&quot; and scroll to the bottom until you see &quot;Use Custom&quot;. Select &quot;Use Custom&quot; and select your Raspbian Image from your Downloads folder. <br />
                     <p>
                         <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
-                            <img src="FlashMicroSD.PNG" width="300" alt="flash raspbian to microSD" class="img-responsive img-responsive" /></a>Flash Raspbian to USB drive<br />
+                            <img src="Images/FlashMicroSD.PNG" width="300" alt="flash raspbian to microSD" class="img-responsive img-responsive" /></a>Flash Raspbian to USB drive<br />
                     </p>
                 </li>
                 <li>Press the Write button. The process will take several minutes.</li>
@@ -205,7 +205,7 @@
                     &amp; Found.
                     <p>
                         <a href="MyName.JPG" class="img-responsive img-rounded" target="popup" onclick="window.open('MyName.jpg', 'popup'); return false;">
-                            <img src="MyName.JPG" width="300" alt="create MyName.txt" class="img-responsive img-responsive" /></a>Find &#39;boot&#39;, create &#39;MyName.txt&#39;<br />
+                            <img src="Images/MyName.JPG" width="300" alt="create MyName.txt" class="img-responsive img-responsive" /></a>Find &#39;boot&#39;, create &#39;MyName.txt&#39;<br />
                     </p>
 
                 </li>
@@ -229,13 +229,10 @@
                 <li>Press the power button on the Pi, which should be on top or around the monitor in front of you.<br />
                     You should see a red light on the Pi, which indicates power is on.</li>
 
-                <li>On your monitor press the button with the colored dot.
+                <li>On your monitor press the button with the colored dot (second button from the left).
                     <br />
                     Note that repeatedly pressing this button switches the monitor between displaying your laptop and the Raspberry Pi.
                 </li>
-                <li>Follow the on-screen instructions to set your country, language and Time-zone.<br />
-                    Check the boxes for &#39;Use English language&#39; and &#39;Use US keyboard&#39;.</li>
-                <li>Check “This screen shows a black border around the desktop” if you have a black border.</li>
                 <li>ONLY CONNECT TO WSU GUEST NETWORK!!!<br />
                     If prompted make an account and log in.<br />
                     <strong>Note: you may periodically have to open the Raspberry Pi browser to 'winona.edu' and repeat the WSU Guest Network login process.</strong>
@@ -259,7 +256,7 @@
                 <li>If you forget your password you can change it in the settings, under Pi&gt;Preferences&gt;Raspberry Pi Configuration.
                     <p>
                         <a href="ChangePassword.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ChangePassword.PNG', 'popup'); return false;">
-                            <img src="ChangePassword.PNG" width="300" alt="change password" class="img-responsive img-responsive" /></a>Changing Password<br />
+                            <img src="Images/ChangePassword.PNG" width="300" alt="change password" class="img-responsive img-responsive" /></a>Changing Password<br />
                     </p>
                 </li>
 
@@ -271,7 +268,7 @@
                 <li>In the upper left corner, you will see the Raspberry Icon, aka 
                     &#39;Menu&#39;<br />
                     Click the Raspberry icon,
-                    <img src="Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" />
+                    <img src="Images/Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" />
                     then preferences, and Raspberry Pi Configuration.<br />
                 </li>
                 <li>Click the interfaces tab, Enable SSH and VNC.</li>
@@ -298,7 +295,7 @@
                 <li>In the Terminal window type <code>scrot -h</code><br />This brings up information on how to use scrot.<br />Review this information.<br />
 					<p>
 						<a href="scrot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrot.PNG', 'popup'); return false;">
-						<img src="scrot.PNG" width="300" alt="scrot help" class="img-responsive img-responsive" /></a>scrot help
+						<img src="Images/scrot.PNG" width="300" alt="scrot help" class="img-responsive img-responsive" /></a>scrot help
                     </p>
 					<br />
                 </li>
@@ -306,7 +303,7 @@
                 <li>Note that simply typing <code>scrot</code> in a Terminal window takes a screen shot and stores it in the   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
                     <p>
                         <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                            <img src="ScrotShots.PNG" width="300" alt="screen shots" class="img-responsive img-responsive" /></a>Scrot Screen Shots
+                            <img src="Images/ScrotShots.PNG" width="300" alt="screen shots" class="img-responsive img-responsive" /></a>Scrot Screen Shots
                     </p>
                 </li>
 
@@ -323,7 +320,7 @@
                     Then click OK.<br />
                     <p>
                         <a href="YourName.png" class="img-responsive img-rounded" target="popup" onclick="window.open('YourName.PNG', 'popup'); return false;">
-                            <img src="YourName.png" width="300" alt="desktop settings" class="img-responsive img-responsive" /></a>Desktop Settings<br />
+                            <img src="Images/YourName.png" width="300" alt="desktop settings" class="img-responsive img-responsive" /></a>Desktop Settings<br />
                     </p>
                 </li>
             </ol>
@@ -353,10 +350,10 @@
             <p>
                 The screen shot name will be of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
                 <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                    <img src="ConfigurationScreenShot.PNG" width="300" alt="sample screen shot" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
+                    <img src="Images/ConfigurationScreenShot.PNG" width="300" alt="sample screen shot" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
                 <br />
             </p>
-            Use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot.<br />
+            Use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot.find your screen shot.<br />
         </div>
         <div class="col-lg-12 text-primary">
             <p>
