revising IoTA01 to create two versions-Windows and RPi

--- a/IOTA01_RPi/IOTA01.html
+++ b/IOTA01_RPi/IOTA01.html
@@ -24,7 +24,7 @@
 
         <input name="InstID" type="hidden" id="InstID" value="00617282">
 
-        <h1 class="text-center">Setting Up an Arduino Uno</h1>
+        <h1 class="text-center">Programming an Arduino Uno via RPi</h1>
 
 
         <!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -92,7 +92,9 @@
 
 
             <p>
-                These instructions will show you how to create 
+                A microcontroller runs one program that is loaded into ROM.<br />
+                When the power is cycled the same program will run again.<br />
+                The following instructions will show you how to create 
                 and upload &#39;sketches&#39; or programs onto an <a href="https://en.wikipedia.org/wiki/Arduino_Uno" class="bg-info text-white" target="_blank">Arduino UNO microcontroller</a>.<br />
                 Microcontrollers are becoming common-they control automobile engines and many other complex systems.<br />
                 They automate tasks to save time. <a href="https://www.elprocus.com/different-microcontrollers-used-in-automobiles/" class="bg-info text-white" target="_blank">Examples</a>.<br />
